--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -4,6 +4,8 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px 0;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.258);
 
     nav {
         img {
