--- a/src/styles/topic-search.scss
+++ b/src/styles/topic-search.scss
@@ -1,25 +1,34 @@
 form {
+    max-width: 1200px;
+    width: 90%;
     margin: 20px auto;
     display: flex;
     gap: 2px;
-    justify-content: flex-start;
+    justify-content: center;
 
     input {
         padding: 10px;
-        width: 250px;
+        width: 200px;
         font-size: 14px;
-        border: 1px solid gray;
+        border: 1px solid rgba(128, 128, 128, 0.498);
 
-        &:focus{
+        &:focus {
             outline: none;
         }
     }
     button {
         padding: 14px;
-        width: 150px;
+        width: 100px;
         background-color: $primary-color;
         border: 1px solid $primary-color;
         color: #FFF;
         cursor: pointer;
+    }
+}
+
+
+@media screen and (min-width: 820px){
+    form {
+        justify-content: flex-start;
     }
 }
